--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
+<input class="slider-promo__controls-control" id="promo-slide-1" type="radio" name="promo-slide" checked>
+<input class="slider-promo__controls-control" id="promo-slide-2" type="radio" name="promo-slide">
+<input class="slider-promo__controls-control" id="promo-slide-3" type="radio" name="promo-slide">
 <header class="page-header container">
   <div class="page-header-wrapper">
     <a href="#" class="logotype page-header__logo">Device</a>
     <div class="page-header__actions">
-      <!--
-      Нужно дополнительно форму тут обернуть?
-      -->
-      <form action="#" class="search-form page-header__search">
-        <p class="search-form__control">
-          <input type="search" class="search-form__field" placeholder="Поиск по сайту">
-        </p>
+      <form action="/" class="search-form page-header__search">
+        <input type="search" class="search-form__field" placeholder="Поиск по сайту">
         <input type="submit" class="search-form__send" value="Найти">
       </form>
       <ul class="page-header__profile">
@@ -74,37 +72,42 @@
 </header>
 <main>
   <section class="slider-promo container">
+    <div class="slider-promo__controls">
+      <label for="promo-slide-1"></label>
+      <label for="promo-slide-2"></label>
+      <label for="promo-slide-3"></label>
+    </div>
     <h2 class="visually-hidden">Лучшие товары 2017!</h2>
     <article class="slider-promo__item">
-      <h2 class="visually-hidden">Самая длинная селфи палка</h2>
-      <figure class="slider-promo__item-photo-container">
-        <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи" class="slider-promo__item-photo">
-      </figure>
-      <div class="slider-promo__item-main-content">
-        <section class="slider-promo__item-info">
-          <h2 class="slider-promo__item-info-title">Делай селфи,
-            как Бен Стиллер!</h2>
-          <p class="slider-promo__item-info-description">
-            Самая длинная палка для селфи доступна в нашем магазине.
-            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-          </p>
-          <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
-        </section>
-        <div class="slider-promo__item-specification">
-          <div class="slider-promo__item-specification-box">
-            <p class="slider-promo__item-specification-value">8,5 м</p>
-            <p class="slider-promo__item-specification-name">Длина палки</p>
-          </div>
-          <div class="slider-promo__item-specification-box">
-            <p class="slider-promo__item-specification-value">5 кг</p>
-            <p class="slider-promo__item-specification-name">Вес палки</p>
-          </div>
-          <div class="slider-promo__item-specification-box">
-            <p class="slider-promo__item-specification-value">Карбон</p>
-            <p class="slider-promo__item-specification-name">Материал</p>
+        <h2 class="visually-hidden">Самая длинная селфи палка</h2>
+        <figure class="slider-promo__item-photo-container">
+          <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи" class="slider-promo__item-photo">
+        </figure>
+        <div class="slider-promo__item-main-content">
+          <section class="slider-promo__item-info">
+            <h2 class="slider-promo__item-info-title">Делай селфи,
+              как Бен Стиллер!</h2>
+            <p class="slider-promo__item-info-description">
+              Самая длинная палка для селфи доступна в нашем магазине.
+              Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+            </p>
+            <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
+          </section>
+          <div class="slider-promo__item-specification">
+            <div class="slider-promo__item-specification-box">
+              <p class="slider-promo__item-specification-value">8,5 м</p>
+              <p class="slider-promo__item-specification-name">Длина палки</p>
+            </div>
+            <div class="slider-promo__item-specification-box">
+              <p class="slider-promo__item-specification-value">5 кг</p>
+              <p class="slider-promo__item-specification-name">Вес палки</p>
+            </div>
+            <div class="slider-promo__item-specification-box">
+              <p class="slider-promo__item-specification-value">Карбон</p>
+              <p class="slider-promo__item-specification-name">Материал</p>
+            </div>
           </div>
         </div>
-      </div>
     </article>
     <article class="slider-promo__item">
       <h2 class="visually-hidden">Мотивирующие фитнес-браслеты</h2>
@@ -121,11 +124,11 @@
           </p>
           <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
         </section>
-      </div>
-      <div class="slider-promo__item-specification">
-        <div class="slider-promo__item-specification-box">
-          <p class="slider-promo__item-specification-value">48 часов</p>
-          <p class="slider-promo__item-specification-name">Без подзарядки</p>
+        <div class="slider-promo__item-specification">
+          <div class="slider-promo__item-specification-box">
+            <p class="slider-promo__item-specification-value">48 часов</p>
+            <p class="slider-promo__item-specification-name">Без подзарядки</p>
+          </div>
         </div>
       </div>
     </article>
@@ -144,27 +147,18 @@
           </p>
           <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
         </section>
-      </div>
-      <div class="slider-promo__item-specification">
-        <div class="slider-promo__item-specification-box">
-          <p class="slider-promo__item-specification-value">800 м</p>
-          <p class="slider-promo__item-specification-name">Дальность полета</p>
-        </div>
-        <div class="slider-promo__item-specification-box">
-          <p class="slider-promo__item-specification-value">50 м</p>
-          <p class="slider-promo__item-specification-name">Радиус поражения</p>
+        <div class="slider-promo__item-specification">
+          <div class="slider-promo__item-specification-box">
+            <p class="slider-promo__item-specification-value">800 м</p>
+            <p class="slider-promo__item-specification-name">Дальность полета</p>
+          </div>
+          <div class="slider-promo__item-specification-box">
+            <p class="slider-promo__item-specification-value">50 м</p>
+            <p class="slider-promo__item-specification-name">Радиус поражения</p>
+          </div>
         </div>
       </div>
     </article>
-    <div class="slider-promo__controls">
-      <!-- нормально на радио с лейблом завесить их тут просто или еще нужно дополнительно обернуть в p или div эти label + input? -->
-      <label for="promo-slide-1"></label>
-      <input class="slider-promo__controls-control" id="promo-slide-1" type="radio" name="promo-slide">
-      <label for="promo-slide-2"></label>
-      <input class="slider-promo__controls-control" id="promo-slide-2" type="radio" name="promo-slide">
-      <label for="promo-slide-3"></label>
-      <input class="slider-promo__controls-control" id="promo-slide-3" type="radio" name="promo-slide">
-    </div>
   </section>
   <div class="container">
     <section class="categories">
