--- a/catalog.html
+++ b/catalog.html
@@ -2,17 +2,18 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
-<header class="page-header">
-  <div class="container">
+<header class="page-header container">
+  <div class="page-header-wrapper">
     <a href="#" class="logotype page-header__logo">Device</a>
     <div class="page-header__actions">
-      <form action="#" class="search-form page-header__search">
+      <form action="/" class="search-form page-header__search">
         <input type="search" class="search-form__field" placeholder="Поиск по сайту">
-        <button class="search-form__send">Найти</button>
+        <input type="submit" class="search-form__send" value="Найти">
       </form>
       <ul class="page-header__profile">
         <li class="page-header__profile-item">
@@ -27,55 +28,57 @@
           <a href="#" class="page-header__options-link">Корзина</a>
         </li>
       </ul>
-      <nav class="page-header__nav">
-        <ul class="page-header__nav-list">
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Каталог товаров</a>
-            <ul class="page-header__nav-goods">
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Умные часы</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
-              </li>
-            </ul>
-          </li>
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Доставка</a>
-          </li>
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Гарантия</a>
-          </li>
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
     </div>
+    <nav class="page-header__nav">
+      <ul class="page-header__nav-list">
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Каталог товаров</a>
+          <ul class="page-header__nav-goods">
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Умные часы</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
+            </li>
+          </ul>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Доставка</a>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Гарантия</a>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Контакты</a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </header>
 <main>
-  <h1 class="visually-hidden">Каталог товаров сайта</h1>
-  <article class="breadcrumbs">
-    <h2 class="visually-hidden">Где я сейчас?</h2>
-    <ul class="breadcrumbs-list">
-      <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Главная</a></li>
-      <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Каталог товаров</a></li>
-      <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Моноподы для селфи</a></li>
-    </ul>
-  </article>
+  <div class="container">
+    <h1 class="catalog-title">Каталог товаров сайта</h1>
+    <article class="breadcrumbs">
+      <h2 class="visually-hidden">Где я сейчас?</h2>
+      <ul class="breadcrumbs-list">
+        <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Главная</a></li>
+        <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Каталог товаров</a></li>
+        <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Моноподы для селфи</a></li>
+      </ul>
+    </article>
+  </div>
   <section class="products">
     <div class="products__titles">
       <div class="container">
@@ -83,13 +86,13 @@
         <section class="products__sort">
           <h2 class="products__sort-title">Сортировка</h2>
           <ul class="products__sort-list">
-            <li><a href="#" class="products__sort-list-link">По цене</a></li>
-            <li><a href="#" class="products__sort-list-link">По типу</a></li>
-            <li><a href="#" class="products__sort-list-link">По популярности</a></li>
+            <li class="products__sort-list-item"><a href="#" class="products__sort-list-link">По цене</a></li>
+            <li class="products__sort-list-item"><a href="#" class="products__sort-list-link">По типу</a></li>
+            <li class="products__sort-list-item"><a href="#" class="products__sort-list-link">По популярности</a></li>
           </ul>
           <div class="products__sort-type">
-            <a href="#" class="products__sort-up"></a>
-            <a href="#" class="products__sort-down"></a>
+            <a href="#" class="products__sort-up">U</a>
+            <a href="#" class="products__sort-down">D</a>
           </div>
         </section>
       </div>
@@ -165,9 +168,11 @@
                 <span class="products__items-item-price">500 руб.</span>
               </figcaption>
             </figure>
-            <div class="products__items-item-controls">
-              <a href="#" class="products__items-item-buy">В корзину</a>
-              <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+            <div class="products__items-item-mask products__items-item-mask_show">
+              <div class="products__items-item-controls">
+                <a href="#" class="btn products__items-item-buy-btn">В корзину</a>
+                <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+              </div>
             </div>
           </article>
           <article class="products__items-item">
@@ -179,9 +184,11 @@
                 <span class="products__items-item-price">1 500 руб.</span>
               </figcaption>
             </figure>
-            <div class="products__items-item-controls">
-              <a href="#" class="products__items-item-buy">В корзину</a>
-              <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+            <div class="products__items-item-mask">
+              <div class="products__items-item-controls">
+                <a href="#" class="btn products__items-item-buy-btn">В корзину</a>
+                <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+              </div>
             </div>
           </article>
           <article class="products__items-item">
@@ -193,9 +200,11 @@
                 <span class="products__items-item-price">2 500 руб.</span>
               </figcaption>
             </figure>
-            <div class="products__items-item-controls">
-              <a href="#" class="products__items-item-buy">В корзину</a>
-              <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+            <div class="products__items-item-mask">
+              <div class="products__items-item-controls">
+                <a href="#" class="btn products__items-item-buy-btn">В корзину</a>
+                <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+              </div>
             </div>
           </article>
           <article class="products__items-item products__items-item_new">
@@ -207,9 +216,11 @@
                 <span class="products__items-item-price">4 900 руб.</span>
               </figcaption>
             </figure>
-            <div class="products__items-item-controls">
-              <a href="#" class="products__items-item-buy">В корзину</a>
-              <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+            <div class="products__items-item-mask">
+              <div class="products__items-item-controls">
+                <a href="#" class="btn products__items-item-buy-btn">В корзину</a>
+                <a href="#" class="products__items-item-compare">Добавить к сравнению</a>
+              </div>
             </div>
           </article>
           <section class="pagination">
@@ -250,20 +261,16 @@
         <li class="page-footer__menu-item"><a href="#" class="page-footer__menu-link">Контакты</a></li>
       </ul>
       <div class="page-footer__social">
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_facebook"></a>
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_instagran"></a>
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_ftwitter"></a>
+        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_facebook">fb</a>
+        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_instagran">in</a>
+        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_ftwitter">fb</a>
       </div>
-    </div>
-    <div class="page-footer__profile">
-      <ul class="page-footer__profile-list">
-        <li class="page-footer__profile-item">
-          <a href="#" class="page-footer__profile-link page-footer__profile-link_signin">Войти</a>
-        </li>
-      </ul>
     </div>
     <div class="page-footer__actions">
       <ul class="page-footer__actions-list">
+        <li class="page-footer__actions-item">
+          <a href="#" class="page-footer__actions-link">Войти</a>
+        </li>
         <li class="page-footer__actions-item">
           <a href="#" class="page-footer__actions-link">Сравнить</a>
         </li>
