--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
 <header class="page-header container">
   <div class="page-header-wrapper">
-    <a href="#" class="logotype page-header__logo">Device</a>
+    <a href="index.html" class="logotype page-header__logo">Device</a>
     <div class="page-header__actions">
       <form action="/" class="search-form page-header__search">
         <input type="search" class="search-form__field" placeholder="Поиск по сайту">
@@ -32,27 +32,29 @@
     <nav class="page-header__nav">
       <ul class="page-header__nav-list">
         <li class="page-header__nav-item">
-          <a href="#" class="page-header__nav-link">Каталог товаров</a>
-          <ul class="page-header__nav-goods">
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Умные часы</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
-            </li>
-          </ul>
+          <a href="catalog.html" class="page-header__nav-link page-header__nav-link-catalog">Каталог товаров</a>
+          <div class="page-header__nav-goods__container">
+            <ul class="page-header__nav-goods">
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Умные часы</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="page-header__nav-item">
           <a href="#" class="page-header__nav-link">Доставка</a>
@@ -73,7 +75,7 @@
     <article class="breadcrumbs">
       <h2 class="visually-hidden">Где я сейчас?</h2>
       <ul class="breadcrumbs-list">
-        <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Главная</a></li>
+        <li class="breadcrumbs-item"><a href="index.html" class="breadcrumbs-link">Главная</a></li>
         <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Каталог товаров</a></li>
         <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Моноподы для селфи</a></li>
       </ul>
@@ -261,9 +263,9 @@
         <li class="page-footer__menu-item"><a href="#" class="page-footer__menu-link">Контакты</a></li>
       </ul>
       <div class="page-footer__social">
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_facebook">fb</a>
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_instagran">in</a>
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_ftwitter">fb</a>
+        <a href="#" class="btn-device page-footer__social-btn page-footer__social-btn_facebook">fb</a>
+        <a href="#" class="btn-device page-footer__social-btn page-footer__social-btn_instagran">in</a>
+        <a href="#" class="btn-device page-footer__social-btn page-footer__social-btn_ftwitter">fb</a>
       </div>
     </div>
     <div class="page-footer__actions">
@@ -287,35 +289,6 @@
     </div>
   </div>
 </footer>
-<div class="modal-window modal-feedback">
-  <button class="modal-feedback__close">Закрыть</button>
-  <h2 class="visually-hidden modal-map__container-title">Как с нами связаться?</h2>
-  <form method="post">
-    <div class="modal-feedback__user-data">
-      <label>
-        Ваше имя:
-        <input type="text" name="name" placeholder="Представтесь, пожалуйста">
-      </label>
-      <label>
-        Ваш e-mail:
-        <input type="text" name="name" placeholder="Для отправки ответа">
-      </label>
-    </div>
-    <div class="modal-feedback__message">
-      <textarea name="message" placeholder="В свободной форме"></textarea>
-    </div>
-    <input type="submit" value="Отправить">
-  </form>
-</div>
-<div class="modal-window modal-map">
-  <button class="modal-map__close">Закрыть</button>
-  <div class="modal-map__container">
-    <h2 class="visually-hidden modal-map__container-title">Как до нас добраться</h2>
-    <p class="modal-map__container-map-no-js">
-      <img src="img/map.jpg" width="560" height="222" alt="Наш офис по адресу ул. Хуббы-буббы дом 1 ОАО 'Академия ХТМЛ'">
-    </p>
-    <!-- Ya code goes here -->
-  </div>
 </div>
 </body>
 </html>
