--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <input class="slider-promo__controls-control" id="promo-slide-3" type="radio" name="promo-slide">
 <header class="page-header container">
   <div class="page-header-wrapper">
-    <a href="#" class="logotype page-header__logo">Device</a>
+    <a href="index.html" class="logotype page-header__logo">Device</a>
     <div class="page-header__actions">
       <form action="/" class="search-form page-header__search">
         <input type="search" class="search-form__field" placeholder="Поиск по сайту">
@@ -35,27 +35,29 @@
     <nav class="page-header__nav">
       <ul class="page-header__nav-list">
         <li class="page-header__nav-item">
-          <a href="#" class="page-header__nav-link">Каталог товаров</a>
-          <ul class="page-header__nav-goods">
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Умные часы</a>
-            </li>
-            <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
-            </li>
-          </ul>
+          <a href="catalog.html" class="page-header__nav-link page-header__nav-link-catalog">Каталог товаров</a>
+          <div class="page-header__nav-goods__container">
+            <ul class="page-header__nav-goods">
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Умные часы</a>
+              </li>
+              <li class="page-header__nav-goods-item">
+                <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
+              </li>
+            </ul>
+          </div>
         </li>
         <li class="page-header__nav-item">
           <a href="#" class="page-header__nav-link">Доставка</a>
@@ -91,7 +93,7 @@
               Самая длинная палка для селфи доступна в нашем магазине.
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
             </p>
-            <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
+            <a href="#" class="btn-device slider-promo__item-info-btn">Подробнее</a>
           </section>
           <div class="slider-promo__item-specification">
             <div class="slider-promo__item-specification-box">
@@ -122,7 +124,7 @@
             Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать
             занятия и соблюдать диету.
           </p>
-          <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
+          <a href="#" class="btn-device slider-promo__item-info-btn">Подробнее</a>
         </section>
         <div class="slider-promo__item-specification">
           <div class="slider-promo__item-specification-box">
@@ -145,7 +147,7 @@
             Этот обычный, на первый взгляд, квадрокоптер оснащен
             мощным лазером, замаскированным под стандартную камеру.
           </p>
-          <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
+          <a href="#" class="btn-device slider-promo__item-info-btn">Подробнее</a>
         </section>
         <div class="slider-promo__item-specification">
           <div class="slider-promo__item-specification-box">
@@ -219,13 +221,13 @@
       <div class="slider-services__menu">
         <ul class="slider-services__menu-list">
           <li class="slider-services__menu-item">
-            <a href="#" class="btn slider-services__menu-link">Доставка</a>
+            <a href="#" class="btn-device slider-services__menu-link">Доставка</a>
           </li>
           <li class="slider-services__menu-item">
-            <a href="#" class="btn slider-services__menu-link">Гарантия</a>
+            <a href="#" class="btn-device slider-services__menu-link">Гарантия</a>
           </li>
           <li class="slider-services__menu-item">
-            <a href="#" class="btn slider-services__menu-link">Кредит</a>
+            <a href="#" class="btn-device slider-services__menu-link">Кредит</a>
           </li>
         </ul>
       </div>
@@ -296,7 +298,7 @@
           <li class="company-info__about-item">Автотрейдинг</li>
           <li class="company-info__about-item">ЖелДорЭкспедиция</li>
         </ul>
-        <a href="#" class="btn company-info__btn">Подробнее о нас</a>
+        <a href="#" class="btn-device company-info__btn">Подробнее о нас</a>
       </section>
       <section class="company-info__contacts">
         <h2 class="company-info__contacts-title">Контакты</h2>
@@ -307,7 +309,7 @@
             <img src="img/map.jpg"  width="560" height="222" alt="улица Строителей, 15">
           </a>
         </div>
-        <a class="btn company-info__contacts-btn">Напишите нам</a>
+        <a class="btn-device company-info__contacts-btn">Напишите нам</a>
       </section>
     </div>
   </div>
@@ -325,9 +327,9 @@
         <li class="page-footer__menu-item"><a href="#" class="page-footer__menu-link">Контакты</a></li>
       </ul>
       <div class="page-footer__social">
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_facebook">fb</a>
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_instagran">in</a>
-        <a href="#" class="btn page-footer__social-btn page-footer__social-btn_ftwitter">fb</a>
+        <a href="#" class="btn-device page-footer__social-btn page-footer__social-btn_facebook">fb</a>
+        <a href="#" class="btn-device page-footer__social-btn page-footer__social-btn_instagran">in</a>
+        <a href="#" class="btn-device page-footer__social-btn page-footer__social-btn_ftwitter">fb</a>
       </div>
     </div>
     <div class="page-footer__actions">
@@ -351,35 +353,42 @@
     </div>
   </div>
 </footer>
-<div class="modal-window modal-feedback">
-  <button class="modal-feedback__close">Закрыть</button>
-  <h2 class="visually-hidden modal-map__container-title">Как с нами связаться?</h2>
-  <form method="post">
-    <div class="modal-feedback__user-data">
-      <label>
-        Ваше имя:
-        <input type="text" name="name" placeholder="Представтесь, пожалуйста">
-      </label>
-      <label>
-        Ваш e-mail:
-        <input type="text" name="name" placeholder="Для отправки ответа">
-      </label>
-    </div>
-    <div class="modal-feedback__message">
-      <textarea name="message" placeholder="В свободной форме"></textarea>
-    </div>
-    <input type="submit" value="Отправить">
-  </form>
-</div>
-<div class="modal-window modal-map">
-  <button class="modal-map__close">Закрыть</button>
+<section class="modal-window modal-feedback">
+  <div class="modal-feedback__wrapper">
+    <button class="modal-window__close">Закрыть</button>
+    <h2 class="visually-hidden modal-map__container-title">Как с нами связаться?</h2>
+    <form method="post">
+      <div class="modal-feedback__user-data">
+        <label class="modal-feedback__user-data-label">
+          Ваше имя:
+          <input class="modal-feedback__user-data-input" type="text" name="name" placeholder="Представтесь, пожалуйста">
+        </label>
+        <label class="modal-feedback__user-data-label">
+          Ваш e-mail:
+          <input class="modal-feedback__user-data-input" type="text" name="name" placeholder="Для отправки ответа">
+        </label>
+      </div>
+      <div class="modal-feedback__message">
+        <label class="modal-feedback__message-label">
+          Текст письма:
+          <textarea class="modal-feedback__message-input" name="message" placeholder="В свободной форме"></textarea>
+        </label>
+      </div>
+      <button class="btn-device">Отправить</button>
+    </form>
+  </div>
+</section>
+<section class="modal-window modal-map">
+  <button class="modal-window__close modal-map__close">Закрыть</button>
   <div class="modal-map__container">
     <h2 class="visually-hidden modal-map__container-title">Как до нас добраться</h2>
     <p class="modal-map__container-map-no-js">
-      <img src="img/map.jpg" width="560" height="222" alt="Наш офис по адресу ул. Хуббы-буббы дом 1 ОАО 'Академия ХТМЛ'">
+      <img src="img/map.jpg" width="100%" height="100%" alt="Наш офис по адресу ул. Хуббы-буббы дом 1 ОАО 'Академия ХТМЛ'">
     </p>
-    <!-- Ya code goes here -->
+    <div class="map" id="yandex-map"></div>
   </div>
-</div>
+</section>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+<script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
